--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,7 +59,7 @@
     margin: 0 !important;
     background: white !important;
   }
-  
+
   body {
     background: white !important;
   }
@@ -68,10 +68,73 @@
     display: none !important;
   }
 
-  .w-lot-column {
+  table {
+    table-layout: auto !important;
+    width: 100% !important;
+  }
+  
+  table th.w-lot-column-20,
+  table td.w-lot-column-20 {
     width: 20px !important;
     min-width: 20px !important;
     max-width: 20px !important;
+  }
+  
+  table th.w-lot-column-30,
+  table td.w-lot-column-30 {
+    width: 30px !important;
+    min-width: 30px !important;
+    max-width: 30px !important;
+  }
+  
+  table th.w-lot-column-40,
+  table td.w-lot-column-40 {
+    width: 40px !important;
+    min-width: 40px !important;
+    max-width: 40px !important;
+  }
+  
+  table th.w-lot-column-50,
+  table td.w-lot-column-50 {
+    width: 50px !important;
+    min-width: 50px !important;
+    max-width: 50px !important;
+  }
+  
+  table th.w-lot-column-70,
+  table td.w-lot-column-70 {
+    width: 70px !important;
+    min-width: 70px !important;
+    max-width: 70px !important;
+  }
+  
+  table th.w-lot-column-90,
+  table td.w-lot-column-90 {
+    width: 90px !important;
+    min-width: 90px !important;
+    max-width: 90px !important;
+  }
+  
+  table th.w-lot-column-150,
+  table td.w-lot-column-150 {
+    width: 150px !important;
+    min-width: 150px !important;
+    max-width: 150px !important;
+  }
+  
+  table th.w-lot-column-200,
+  table td.w-lot-column-200 {
+    width: 200px !important;
+    min-width: 200px !important;
+    max-width: 200px !important;
+  }
+  
+  /* Legacy support */
+  table th.w-lot-column,
+  table td.w-lot-column {
+    width: 90px !important;
+    min-width: 90px !important;
+    max-width: 90px !important;
   }
   
   table thead {
@@ -92,4 +155,65 @@
     break-inside: avoid !important;
     page-break-inside: avoid !important;
   }
+}
+
+table {
+  table-layout: auto;
+  width: 100%;
+}
+
+table th.w-lot-column-20,
+table td.w-lot-column-20 {
+  width: 20px !important;
+  min-width: 20px !important;
+  max-width: 20px !important;
+}
+
+table th.w-lot-column-30,
+table td.w-lot-column-30 {
+  width: 30px !important;
+  min-width: 30px !important;
+  max-width: 30px !important;
+}
+
+table th.w-lot-column-40,
+table td.w-lot-column-40 {
+  width: 40px !important;
+  min-width: 40px !important;
+  max-width: 40px !important;
+}
+
+table th.w-lot-column-50,
+table td.w-lot-column-50 {
+  width: 50px !important;
+  min-width: 50px !important;
+  max-width: 50px !important;
+}
+
+table th.w-lot-column-70,
+table td.w-lot-column-70 {
+  width: 70px !important;
+  min-width: 70px !important;
+  max-width: 70px !important;
+}
+
+table th.w-lot-column-90,
+table td.w-lot-column-90 {
+  width: 90px !important;
+  min-width: 90px !important;
+  max-width: 90px !important;
+}
+
+table th.w-lot-column-150,
+table td.w-lot-column-150 {
+  width: 150px !important;
+  min-width: 150px !important;
+  max-width: 150px !important;
+}
+
+table th.w-lot-column-200,
+table td.w-lot-column-200 {
+  width: 200px !important;
+  min-width: 200px !important;
+  max-width: 200px !important;
 }
