--- a/src/app/pages/manage/vehicle-types/vehicle-types.html
+++ b/src/app/pages/manage/vehicle-types/vehicle-types.html
@@ -2,13 +2,13 @@
   <div actions class="flex gap-2 items-end">
     <div class="flex flex-col">
       <label class="text-xs mb-1">Search</label>
-      <input pInputText [(ngModel)]="searchTerm" placeholder="Search types" class="text-sm" />
+      <input pInputText [(ngModel)]="searchTerm" (keyup.enter)="load()" placeholder="Search types" class="text-sm" />
     </div>
     <p-button label="Add Type" size="small" (click)="openDrawer()"></p-button>
   </div>
 </app-header>
 
-<p-table [value]="filteredTypes" [loading]="loading" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
+<p-table [value]="vehicleTypes" [loading]="loading" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
   <ng-template pTemplate="header">
     <tr>
       <th>Name</th>
@@ -42,15 +42,16 @@
   </ng-template>
 </p-table>
 
-<p-drawer [(visible)]="drawerVisible" [header]="editingVehicleType ? 'Edit Vehicle Type' : 'Add Vehicle Type'" position="right">
+<p-drawer [(visible)]="drawerVisible" [header]="editingVehicleType ? 'Edit Vehicle Type' : 'Add Vehicle Type'" position="right" (onHide)="clearValidations()">
   <div class="space-y-4">
     <div>
-      <label class="block text-sm font-medium mb-2">Name</label>
+      <label class="block text-sm font-medium mb-2">Name <span class="text-red-500">*</span></label>
       <input 
         pInputText 
         [(ngModel)]="newVehicleTypeName" 
         placeholder="Enter vehicle type name"
-        class="w-full" />
+        class="w-full" 
+        required />
     </div>
     
     <div class="flex gap-2 pt-4">
